# amazon-bedrock

./: .env  .gitignore  README.md  dev-requirements.txt  pyproject.toml
src/: dto.py  run.py  utils.py
